--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "supertest": "^6.3.1"
     },
     "dependencies": {
+        "bcrypt-nodejs": "^0.0.3",
         "body-parser": "^1.20.1",
         "consign": "^0.1.6",
         "express": "^4.18.2",
